--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev-test": "jest --watchAll"
   },
   "keywords": [
     "quickbooks-demo-app"
@@ -27,6 +28,7 @@
   "author": "Karan Shaw",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "supertest": "^5.0.0"
   }
 }
